# symbolic-bert-finetuning

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  Makefile  README.md  alimento-cantidad.vocab  alimento-toma.vocab  alimento-unidad.vocab  alimentos.vocab  alimentos_unidad_defecto.csv  chatbot.html  default_food.yaml  foods.yaml  fuzzy_food.txt  ignore.json  mood-database2.json  multialimento-normalization.json  multialimento-token-fixes.json  noalimento.vocab  pyproject.toml  regenerate-search.sh  retrain-food.sh  retrain.sh  template.yaml  token-alimentos.vocab  vocab.json
data/: dish-wd.csv  distilled-drinks-es-wp.csv  entities-wn.csv  feeling-wp.csv  food-entities-wn.csv  food-es-wp.csv  food-wp.csv  foods-wd.csv  sport-wp.csv
data/alimento_tipo/: alimento_tipo_wn.csv  carnes-es-wp.csv  distilled-drinks-es-wp.csv  food-entities-wn.csv  food-entities-wn.new.csv  food-es-wp.csv  food-spain-wp.csv  food-valencia-wp.csv  food-wp.csv  tuberculos-es-wp.csv
dialogs/: cu1.json  cu2.json  cu3.json  cu4.1.json  cu4.2.json  cu4.3.json  cu4.4.json  cu5.json
html/: chatbot.html  food.html  mood.html  multimood.html  sentiment.html
src/medp/: html.py  utils.py  wikipediaapi.py
templates/: faq.yaml  questionnaire.yaml
tests/: CU1.yaml  CU2.yaml  CU3.yaml  CU4.1.yaml  CU4.2.yaml  CU4.3.yaml  CU4.4.yaml  CU5.yaml  auto-cu1.yaml  auto-cu2.yaml  auto-cu3.yaml  auto-cu4.1.yaml  auto-cu4.2.yaml  auto-cu4.3.yaml  auto-cu4.4.yaml  auto-cu5.yaml  basic-test.yaml  conftest.py
